--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
+    "node-fetch": "^2.1.2",
     "pem-jwk": "^1.5.1",
     "request": "^2.85.0"
   },
   "devDependencies": {
     "express": "^4.16.3",
-    "mocha": "^5.1.1"
+    "mocha": "^5.1.1",
+    "sinon": "^5.0.6",
+    "testdouble": "^3.8.1",
+    "sepia": "^2.0.2"
   }
 }
