--- a/package.json
+++ b/package.json
@@ -4,20 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
     "jsonwebtoken": "^8.2.1",
-    "node-fetch": "^2.1.2",
     "pem-jwk": "^1.5.1",
     "request": "^2.85.0"
   },
   "devDependencies": {
     "express": "^4.16.3",
-    "mocha": "^5.1.1",
-    "sepia": "^2.0.2"
+    "mocha": "^5.1.1"
   }
 }
