--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dronedeploy-functions-api",
+  "name": "functions-wrapper",
   "version": "1.1.1",
   "description": "Public GraphQL API and Wrapper for Dronedeploy Functions",
   "main": "index.js",
