--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "functions-wrapper",
+  "name": "@dronedeploy/function-wrapper",
   "version": "1.1.2",
   "description": "Public GraphQL API and Wrapper for Dronedeploy Functions",
   "main": "index.js",
