--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dronedeploy-functions-api",
-  "version": "1.1.1",
+  "name": "@dronedeploy/function-wrapper",
+  "version": "1.1.2",
   "description": "Public GraphQL API and Wrapper for Dronedeploy Functions",
   "main": "index.js",
   "scripts": {
