--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "@dronedeploy/function-wrapper",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Public GraphQL API and Wrapper for Dronedeploy Functions",
   "main": "index.js",
+  "types": "./index.d.ts",
   "scripts": {
     "test": "mocha"
   },
   "author": "",
-  "license": "MIT License",
+  "license": "MIT",
   "dependencies": {
     "jsonwebtoken": "~8.2.1",
     "node-fetch": "2.1.2",
     "pem-jwk": "~1.5.1",
-    "request": "2.85.0"
+    "request": "2.85.0",
+    "@types/express": "^4.16.0"
   },
   "devDependencies": {
     "express": "^4.16.3",
+    "gts": "^0.8.0",
+    "husky": "^0.14.3",
     "mocha": "^5.1.1",
-    "sepia": "^2.0.2"
+    "pretty-quick": "^1.6.0",
+    "sepia": "^2.0.2",
+    "typescript": "^2.9.2"
   }
 }
