--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "5.0.1",
     "jsonwebtoken": "~8.2.1",
     "node-fetch": "2.1.2",
     "pem-jwk": "~1.5.1",
