--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "@dronedeploy/function-wrapper",
-  "version": "1.1.6",
+  "version": "1.1.7",
   "description": "Public GraphQL API and Wrapper for Dronedeploy Functions",
+  "homepage": "https://github.com/dronedeploy/function-wrapper",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dronedeploy/function-wrapper"
+  },
   "main": "index.js",
   "types": "./index.d.ts",
   "scripts": {
