--- a/package.json
+++ b/package.json
@@ -15,20 +15,22 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/express": "^4.16.0",
     "dotenv": "5.0.1",
     "jsonwebtoken": "~8.2.1",
     "node-fetch": "2.1.2",
     "pem-jwk": "~1.5.1",
-    "request": "2.88.0",
-    "@types/express": "^4.16.0"
+    "request": "2.88.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "express": "^4.16.3",
     "gts": "^0.8.0",
     "husky": "^0.14.3",
     "mocha": "^5.1.1",
     "pretty-quick": "^1.6.0",
     "sepia": "^2.0.2",
+    "sinon": "^7.2.2",
     "typescript": "^2.9.2"
   }
 }
