--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/express": "^4.16.0",
     "dotenv": "5.0.1",
     "jsonwebtoken": "~8.2.1",
+    "lodash": "^4.17.11",
     "node-fetch": "2.1.2",
     "pem-jwk": "~1.5.1",
     "request": "2.88.0"
