--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dronedeploy/function-wrapper",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "Public GraphQL API and Wrapper for Dronedeploy Functions",
   "homepage": "https://github.com/dronedeploy/function-wrapper",
   "repository": {
@@ -19,7 +19,7 @@
     "dotenv": "5.0.1",
     "jsonwebtoken": "~8.2.1",
     "lodash": "^4.17.15",
-    "node-fetch": "2.1.2",
+    "node-fetch": "^2.6.1",
     "pem-jwk": "~1.5.1",
     "request": "2.88.0"
   },
