--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dronedeploy/function-wrapper",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "description": "Public GraphQL API and Wrapper for Dronedeploy Functions",
   "homepage": "https://github.com/dronedeploy/function-wrapper",
   "repository": {
@@ -16,12 +16,12 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.16.0",
+    "axios": "^0.25.0",
     "dotenv": "5.0.1",
     "jsonwebtoken": "~8.2.1",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "node-fetch": "^2.6.1",
-    "pem-jwk": "~1.5.1",
-    "request": "2.88.0"
+    "pem-jwk": "~1.5.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
