--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dronedeploy/function-wrapper",
-  "version": "1.2.9",
+  "version": "1.3.0",
   "description": "Public GraphQL API and Wrapper for Dronedeploy Functions",
   "homepage": "https://github.com/dronedeploy/function-wrapper",
   "repository": {
@@ -20,8 +20,7 @@
     "jsonwebtoken": "~8.2.1",
     "lodash": "^4.17.15",
     "node-fetch": "^2.6.7",
-    "pem-jwk": "~1.5.1",
-    "request": "2.88.2"
+    "pem-jwk": "~1.5.1"
   },
   "devDependencies": {
     "chai": "^4.3.6",
