--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dronedeploy/function-wrapper",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "Public GraphQL API and Wrapper for Dronedeploy Functions",
   "homepage": "https://github.com/dronedeploy/function-wrapper",
   "repository": {
@@ -15,7 +15,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@types/express": "^4.16.0",
+    "@types/express": "4.17.17",
     "dotenv": "5.0.1",
     "jsonwebtoken": "~9.0.0",
     "lodash": "^4.17.15",
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.6",
-    "express": "^4.16.3",
+    "express": "4.18.2",
     "gts": "^3.1.0",
     "husky": "^0.14.3",
     "mocha": "^9.2.2",
