--- a/package.json
+++ b/package.json
@@ -15,22 +15,20 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@types/express": "4.17.17",
+    "@types/express": "5.0.1",
     "dotenv": "5.0.1",
-    "jsonwebtoken": "~9.0.0",
+    "jsonwebtoken": "9.0.2",
     "lodash": "^4.17.15",
-    "node-fetch": "^2.6.7",
-    "pem-jwk": "~1.5.1"
+    "node-fetch": "2.7.0"
   },
   "devDependencies": {
-    "chai": "^4.3.6",
-    "express": "4.20.0",
-    "gts": "^3.1.0",
+    "express": "5.0.1",
+    "gts": "6.0.2",
     "husky": "^0.14.3",
-    "mocha": "^9.2.2",
+    "mocha": "11.1.0",
     "pretty-quick": "^1.6.0",
     "sepia": "^2.0.2",
-    "sinon": "^7.2.2",
-    "typescript": "^2.9.2"
+    "sinon": "20.0.0",
+    "typescript": "5.5.4"
   }
 }
